Added git submodule update for newer DTC.

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ sudo: required
 dist: trusty
 before_install:
     - sudo pip install pycparser
+    - git submodule update --init dtc
 script: sudo panda/scripts/install_ubuntu.sh && cd ./build && sudo make check
 #before_script:
 #  - ./configure ${CONFIG}
